--- a/api/pom.xml
+++ b/api/pom.xml
@@ -44,6 +44,24 @@
       <version>2.9.2</version>
       <scope>compile</scope>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-starter-security</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.security</groupId>-->
+      <!--<artifactId>spring-security-config</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>io.jsonwebtoken</groupId>-->
+      <!--<artifactId>jjwt</artifactId>-->
+      <!--<version>0.9.0</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.commons</groupId>-->
+      <!--<artifactId>commons-lang3</artifactId>-->
+      <!--<version>3.1</version>-->
+    <!--</dependency>-->
   </dependencies>
 
 
