--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://192.168.99.100:32768/postgres
+    url: jdbc:postgresql://192.168.99.100:32784/postgres
     username: postgres
     password:
   jpa:
@@ -11,7 +11,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: pavelblinets@gmail.com
-    password: -
+    password: fsdgfgfdgdfgdf
     properties:
       mail:
         smtp:
