--- a/services/pom.xml
+++ b/services/pom.xml
@@ -62,31 +62,35 @@
       <artifactId>mapstruct-processor</artifactId>
       <version>1.1.0.Final</version>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.mockito</groupId>-->
-      <!--<artifactId>mockito-all</artifactId>-->
-      <!--<version>1.9.5</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.assertj</groupId>-->
-      <!--<artifactId>assertj-core</artifactId>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>commons-validator</groupId>-->
-      <!--<artifactId>commons-validator</artifactId>-->
-      <!--<version>1.4.1</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.4.1</version>
+    </dependency>
     <!--<dependency>-->
       <!--<groupId>org.springframework.security</groupId>-->
       <!--<artifactId>spring-security-core</artifactId>-->
       <!--<version>5.0.8.RELEASE</version>-->
     <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.commons</groupId>-->
-      <!--<artifactId>commons-collections4</artifactId>-->
-      <!--<version>4.0</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.0</version>
+    </dependency>
   </dependencies>
 
 
