--- a/services/pom.xml
+++ b/services/pom.xml
@@ -62,6 +62,21 @@
       <artifactId>mapstruct-processor</artifactId>
       <version>1.1.0.Final</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.7</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+    </dependency>
     <!--<dependency>-->
       <!--<groupId>junit</groupId>-->
       <!--<artifactId>junit</artifactId>-->
