--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -51,11 +51,11 @@
       <!--<groupId>com.hazelcast</groupId>-->
       <!--<artifactId>hazelcast</artifactId>-->
     <!--</dependency>-->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.9.7</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+      <!--<artifactId>jackson-databind</artifactId>-->
+      <!--<version>2.9.7</version>-->
+    <!--</dependency>-->
     <!--<dependency>-->
       <!--<groupId>org.springframework.security</groupId>-->
       <!--<artifactId>spring-security-core</artifactId>-->
