basic auth with angular and permit cors requ

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -26,7 +26,7 @@ logging:
   level:
     org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
     org:
-      springframework: TRACE
+      springframework: DEBUG
 
 security:
   require-ssl: true
