--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,35 +1,35 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://192.168.99.100:32768/postgres
-    username: postgres
-    password:
-  jpa:
-    generate-ddl: true
-    hibernate:
-      ddl-auto: update
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: pavelblinets@gmail.com
-    password: fsdgfgfdgdfgdf
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-  session:
-    jdbc:
-      initialize-schema: always
-      table-name: SPRING_SESSION
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://192.168.99.100:32768/postgres
+#    username: postgres
+#    password:
+#  jpa:
+#    generate-ddl: true
+#    hibernate:
+#      ddl-auto: update
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: pavelblinets@gmail.com
+#    password: fsdgfgfdgdfgdf
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+##            enable: true
+#  session:
+#    jdbc:
+#      initialize-schema: always
+#      table-name: SPRING_SESSION
 logging:
   level:
-    org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
+#    org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
     org:
       springframework: DEBUG
 
-security:
-  require-ssl: true
+#security:
+#  require-ssl: true
 server:
   port: 80
   ssl:
