--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://192.168.99.100:32768/postgres
+    url: jdbc:postgresql://192.168.99.100:32770/postgres
     username: postgres
     password:
   jpa:
@@ -26,7 +26,7 @@ logging:
   level:
     org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
     org:
-      springframework: DEBUG
+      springframework: INFO
 
 security:
   require-ssl: true
